--- a/src/views/Login/login.module.css
+++ b/src/views/Login/login.module.css
@@ -3,6 +3,9 @@
     height: 200px;
     background-image: url('../assest/imgs/cneter_bg.png');
     margin-bottom: 10px ;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .text {
     display: inline-block;
@@ -13,6 +16,20 @@
     color: #feffff;
     font-size: 24px;
     font-weight: bold;
+}
+.username {
+    padding: 5px;
+    display: inline-block;
+    width: 100%;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+}
+.avatar {
+    align-self: center;
 }
 .input {
     --font-size:14px;
