--- a/src/views/Login/login.module.css
+++ b/src/views/Login/login.module.css
@@ -1,6 +1,6 @@
 .logo {
     width: 100%;
-    height: 200px;
+    height: 260px;
     background-image: url('../assest/imgs/cneter_bg.png');
     margin-bottom: 10px ;
     display: flex;
@@ -33,6 +33,21 @@
 }
 .input {
     --font-size:14px;
-    --placeholder-color:#757575;
+    --placeholder-color:#DCDFE6;
+}
+
+.card {
+    width: 90%;
+    height: 300px;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 8px;
+    position: absolute;
+    top: 210px;
+    background: white;
+    left: 5%;
+}
+.form {
+    margin-top: 50px;
 }
 
