--- a/src/views/center/center.css
+++ b/src/views/center/center.css
@@ -1,3 +1,29 @@
 .adm-image {
 	align-self: center;
 }
+
+.tabbarcontainer ul {
+	list-style: none;
+	display: flex;
+	height: 100%;
+}
+.tabbarcontainer ul li {
+	flex: 1;
+	text-align: center;
+	align-self: center;
+}
+
+.tabbarcontainer ul li span{
+	color: #999999
+}
+
+.list{
+	margin-top: 10px;
+}
+.orderCard {
+	margin: 12px;
+}
+
+/*.adm-list-card {*/
+/*	margin: 0*/
+/*}*/
